# t2md

./: .gitignore  CONTRIBUTING.md  License  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
src/t2md/: cli.py  default_prompt.md
