[project]
name = "t2md"
version = "0.1.0"
description = "Turn transcripts into an executive summary + textbook-style Markdown"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.scripts]
t2md = "t2md.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
t2md = ["default_prompt.md"]
